# SpiffWorkflow

./: .editorconfig  .flake8  .gitignore  .gitmodules  .readthedocs.yaml  .readthedocs.yml  .sonarcloud.properties  .tool-versions  .travis.yml  AUTHORS  CITATION.cff  CONTRIB  COPYING  COPY_ON_WRITE_IMPLEMENTATION.md  ChangeLog  DEEP_MERGE_OPTIMIZATION_RESULTS.md  Dockerfile  INSTALL  Makefile  README  README.md  RELEASE_NOTES.md  SERIALIZATION_DELTA_OPTIMIZATION.md  SERIALIZATION_PERFORMANCE_RECOMMENDATIONS.md  TODO  VERSION.in  pyproject.toml  requirements.txt  setup.py  sonarcloud-properties  unit_test_extensions.patch  version.sh
.github/workflows/: docs.yml  publish-alpha.yml  publish-on-release.yml  publish-to-test-pypi.yml  tests.yaml
SpiffWorkflow/: #task.py#  Task.py  Workflow.py  __init__.py  exceptions.py  navigation.py  operators.py  task.py  traversal.py  version.py  workflow.py
SpiffWorkflow/bpmn/: BpmnFeelScriptEngine.py  BpmnLoader.py  BpmnScriptEngine.py  BpmnWorkflow.py  DMNPythonScriptEngine.py  FeelLikeScriptEngine.py  FunctionScriptEngine.py  PythonScriptEngine.py  PythonScriptEngineEnvironment.py  __init__.py  exceptions.py  navigation.py  workflow.py
SpiffWorkflow/bpmn2/: Bpmn2Loader.py  BpmnWorkflow.py  __init__.py
SpiffWorkflow/camunda/: README.md
SpiffWorkflow/serializer/: base.py  dict.py  dotv.py  exceptions.py  json.py  prettyxml.py  xml.py
SpiffWorkflow/specs/: #MultiInstance.py#  AcquireMutex.py  Assign.py  Cancel.py  CancelTask.py  Celery.py  Choose.py  ExclusiveChoice.py  Execute.py  Gate.py  Join.py  LoopResetTask.py  Merge.py  MultiChoice.py  MultiInstance.py  MultiInstanceTask.py  ReleaseMutex.py  Simple.py  StartTask.py  SubWorkflow.py  TaskSpec.py  ThreadMerge.py  ThreadSplit.py  ThreadStart.py  Transform.py  Trigger.py  Wait.py  WorkflowSpec.py  __init__.py  base.py
SpiffWorkflow/storage/: DictionarySerializer.py  Exceptions.py  JSONSerializer.py  (+5 more)
doc/: Makefile  SpiffWorkflow.bpmn.parser.rst  SpiffWorkflow.bpmn.rst  SpiffWorkflow.bpmn.specs.rst  SpiffWorkflow.bpmn.storage.rst  SpiffWorkflow.rst  SpiffWorkflow.specs.rst  SpiffWorkflow.storage.rst  SpiffWorkflow.util.rst  basics.rst  bpmn.rst  concepts.rst  conf.py  contact.tex  development.rst  errors.rst  features.rst  index.rst  index2.rst  internals.rst  intro.rst  mkapidoc.py  modules.rst  spiff_workflow.en.tex  spiff_workflow.tex  version.tex
docs/: concepts.rst  conf.py  index.rst  modules.rst
scripts/: explore_bpmn_serialization.py  test_times.py
src/: __init__.py
tests/: run_suite.sh
wireit-editor/: SpiffWorkflow.js  index.html
(+1838 files in other folders)
