[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "SpiffWorkflow"
version = "3.0.0rc0"
description = "A workflow framework and BPMN/DMN Processor"
authors = [
    {name = "Sartography", email = "dan@sartography.com"},
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["spiff", "workflow", "bpmn", "engine"]
license = {"text" = "lGPLv3"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "Programming Language :: Python :: 3",
    "Topic :: Other/Nonlisted Topic",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "lxml",
]

[project.urls]
Homepage =  "https://github.com/sartography/SpiffWorkflow"
Documentation = "https://spiffworkflow.readthedocs.io"

[project.optional-dependencies]
doc = ["sphinx"]
dev = [
    "build",
    "coverage",
]

[tool.setuptools]
packages = ["SpiffWorkflow"]

[tool.setuptools.package-data]
"*" = ["schema/*.xsd"]

[tool.ruff]
line-length = 140
